outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-25_17-01-16/evaluations/problem_eval3727150082662305936_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of proximity to the current node, destination, and hub centrality based on the current state of the tour (e.g., remaining unvisited nodes), while incorporating a penalty for revisiting nodes that are already part of the path to avoid cycles.}
                                                                                                                                                                                                                                                                ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of proximity to the current node, destination, and hub centrality based on the current state of the tour (e.g., remaining unvisited nodes), while incorporating a penalty for revisiting nodes that are already part of the path to avoid cycles.}
                                                                                                                                                                                                                                                                ^
SyntaxError: unmatched '}'
